fix endps add urlcfg
